# sqlxinsert

./: Cargo.toml
