[package]
name = "sqlxinsert"
version = "0.1.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"
license = "MIT"
description = "Sqlx derive macro for simpler inserts"
repository = "https://github.com/fbucek/sqlxinsert"
readme = "README.md"
exclude = [".github/*"]

[lib]
proc-macro = true

[dependencies]
eyre = "0.6.3"
quote = "1.0.7"
syn = "1.0.48"
async-trait = "0.1.41"
sqlx = { version = "0.4.1", default-features = false, features = [ "sqlite", "postgres"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded",  "macros"] }
sqlx = { version = "0.4.1", default-features = false, features = ["runtime-tokio", "macros", "sqlite", "postgres"] }

